--- a/Krabs/Krabs/Properties/Resources.resx
+++ b/Krabs/Krabs/Properties/Resources.resx
@@ -121,17 +121,26 @@
   <data name="price-scan-scanner-bar-barcode-code_108573" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\price-scan-scanner-bar-barcode-code_108573.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="report256_24829" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\report256_24829.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="businesspackage_additionalpackage_box_add_insert_negoci_2335" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\businesspackage_additionalpackage_box_add_insert_negoci_2335.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="recycling_recyclebin_empty_delete_trash_1771" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\recycling_recyclebin_empty_delete_trash_1771.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="email_icon-icons.com_66532" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\email_icon-icons.com_66532.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="live_contacts_15412" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\live_contacts_15412.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="book_1426" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\book_1426.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="metro_email_11435" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\metro_email_11435.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="password_1325" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\password_1325.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,6 +157,9 @@
   <data name="Krab's" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Krab's.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="email_mail_4598" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\email_mail_4598.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="list_notes_930" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\list_notes_930.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,7 +172,13 @@
   <data name="Krabs_text" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Krabs_text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="report256_24829" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\report256_24829.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="email_icon-icons.com_66532 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\email_icon-icons.com_66532 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="metro_email_11435 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\metro_email_11435 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="contactlist_theuser_802" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\contactlist_theuser_802.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
